# AGARS-Ai-Generated-Ai-Roleplay-Simulator

./: .env.example  .gitignore  CLAUDE.md  README-EN.md  README.md  docker-compose.yml  install.bat  install.ps1  package-lock.json  package.json
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  graph.py  monitor.py  narrative.py  report.py  settings.py  simulation.py
backend/app/models/: project.py
backend/app/services/: __init__.py  compat_llm_client.py  dashscope_embedder.py  falkordb_entity_reader.py  graph_builder.py  narrative_engine.py  narrative_engine_config.py  narrative_profile_generator.py  oasis_profile_generator.py  ontology_generator.py  preset_manager.py  prompt_config.py  report_agent.py  semantic_chunker.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_enricher.py  text_processor.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_graph_sync.py  zep_tools.py
backend/app/utils/: file_parser.py  llm_client.py  llm_monitor.py  logger.py  retry.py
backend/presets/: default.json
frontend/: index.html  package.json
frontend/src/: App.vue
frontend/src/api/: graph.js  index.js  narrative.js  settings.js  simulation.js
frontend/src/components/: GraphPanel.vue  HistoryDatabase.vue  MonitorPanel.vue  NarrativePlayer.vue  SettingsModal.vue  Step1GraphBuild.vue  Step2EnvSetup.vue  Step5Interaction.vue  WorldMapPanel.vue
frontend/src/router/: index.js
scripts/: ensure-docker.js  kill-port.js
(+9 files in other folders)
